--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <a href="resume.pdf" download class="resume-btn">Download Resume</a>
     <a href="certifications.pdf" download class="resume-btn">Certifications</a>
 
-    <!-- Contact Icons -->
+    <!-- Hero Contact Icons -->
     <div class="hero-contact-icons">
       <a href="https://github.com/SriramGandhiS" target="_blank">
         <img src="images/github.png" alt="GitHub">
       </a>
       <a href="https://www.linkedin.com/in/sriram-s-432a99296" target="_blank">
-        <img src="images/linkedin.png" alt="LinkedIn">
+        <img src="images/linked.png" alt="LinkedIn">
       </a>
       <a href="mailto:iamramm8@gmail.com">
         <img src="images/mail.png" alt="Email">
@@ -82,20 +82,53 @@
     </div>
   </section>
 
-  <!-- CONTACT SECTION -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:iamramm8@gmail.com">iamramm8@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/SriramGandhiS" target="_blank">github.com/SriramGandhiS</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/sriram-s-432a99296" target="_blank">linkedin.com/in/sriram-s-432a99296</a></p>
-  </section>
+ <!-- CONTACT SECTION -->
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="contact-wrapper">
+    <!-- Left Column -->
+    <div class="contact-left">
+      <p>
+        <a href="mailto:iamramm8@gmail.com" class="glow-mail">
+          <img src="images/mail.png" alt="Email" class="contact-icon"> iamramm8@gmail.com
+        </a>
+      </p>
+      <p><span class="label">Mobile:</span> 9361123688</p>
+    </div>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 Sriram. All Rights Reserved.</p>
-  </footer>
+    <!-- Right Column -->
+    <div class="contact-right">
+      <p><span class="label">Place:</span> Madurai, Tamil Nadu, India</p>
+      <p><span class="label">Current:</span> Computer Science Engineering Student @ PSNACET</p>
+    </div>
+  </div>
 
-  <script src="index.js"></script>
+  <!-- Social Icons -->
+  <div class="contact-social">
+    <div class="social-item">
+      <a href="https://github.com/SriramGandhiS" target="_blank">
+        <img src="images/github.png" alt="GitHub">
+      </a>
+      <p>GitHub</p>
+    </div>
+    <div class="social-item">
+      <a href="https://www.linkedin.com/in/sriram-s-432a99296" target="_blank">
+        <img src="images/linked.png" alt="LinkedIn">
+      </a>
+      <p>LinkedIn</p>
+    </div>
+    <div class="social-item">
+      <a href="mailto:iamramm8@gmail.com">
+        <img src="images/mail.png" alt="Email">
+      </a>
+      <p>Email</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  &copy; 2025 Sriram. All rights reserved.
+</footer>
+
 </body>
 </html>
-
